--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
   <body>
     <header>
       <h1>The Gallery of Horns</h1>
-      <select>
+      <select id="select-filter">
         <option value="default">Filter by Keyword</option>
       </select>
+      <select id="select-sort">
+        <option value="default">sort by</option>
+        <option value="title"> by title</option>
+        <option value="horn">by number of horns</option>
+      </select>
+      <button>Page 1</button>
+      <button>Page 2</button>
     </header>
     <main>
       <template id="photo-template" type="x-tmpl-mustache">
